deployments/apps/clonarr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clonarr
  namespace: servarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: clonarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: clonarr
    spec:
      containers:
        - name: clonarr
          image: ghcr.io/prophetse7en/clonarr:v2.5.6
          ports:
            - containerPort: 6060
          volumeMounts:
            - name: config
              mountPath: /config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: clonarr-config
